# rs232-mqtt-bridge

./: CMakeLists.txt  ESP32_v2.1_수정보고서_OLD.md  GITHUB_SETUP.md  README.md  partitions.csv  sdkconfig.defaults
.github/workflows/: release.yml
firmware/: version.json
main/: CMakeLists.txt  ble_service.c  ble_service.h  cmd_handler.c  cmd_handler.h  crc_utils.c  crc_utils.h  data_parser.c  data_parser.h  main.c  mqtt_handler.c  mqtt_handler.h  nvs_storage.c  nvs_storage.h  ota_handler.c  ota_handler.h  protocol_def.h  uart_handler.c  uart_handler.h  wifi_manager.c  wifi_manager.h
main/certs/: github_ca.pem
